--- a/DevCart/src/index.css
+++ b/DevCart/src/index.css
@@ -67,7 +67,7 @@
   opacity: 0.7;
 }
 
-header .headerSearch {
+.headerSearch {
   width: 60%;
   height: 50px;
   background: #f3f4f7;
@@ -76,7 +76,7 @@ header .headerSearch {
   border-radius: 5px;
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
-header .headerSearch input {
+.headerSearch input {
   background: transparent !important;
   outline: none !important;
   font-size: 15px;
@@ -88,10 +88,10 @@ header .headerSearch input {
   margin-right: 0rem;
 }
 
-header .headerSearch input ::-webkit-input-placeholder {
+.headerSearch input ::-webkit-input-placeholder {
   color: rgba(0, 0, 0, 0.6);
 }
-header .headerSearch button {
+.headerSearch button {
   position: absolute;
   top: 4px;
   right: 0px;
@@ -105,7 +105,7 @@ header .headerSearch button {
   margin-left: 24px;
   margin-right: 24px;
 }
-header .headerSearch button svg {
+.headerSearch button svg {
   font-size: 25px;
 }
 .part3 {
@@ -166,10 +166,10 @@ nav .categories .icon2 {
   margin-left: 16px;
 }
 
-nav .nav2 ul{
+nav .nav2 ul {
   margin-bottom: 0px;
 }
-nav .nav2 ul li a{
+nav .nav2 ul li a {
   font-size: 15px;
   text-decoration: none;
   font-weight: 600;
@@ -180,12 +180,16 @@ nav .nav2 ul li a{
   padding: 8px 18px;
   transition: all 0.2s ease-in-out;
 }
-nav .nav2 ul li a:hover{
+nav .nav2 ul li a:hover {
   color: #2bbef9;
   background: #f0faff;
   border-radius: 30px;
 }
 
-nav .nav2 ul li a svg{
+nav .nav2 ul li a svg {
   font-size: 20px;
+}
+
+.location-modal .MuiPaper-elevation {
+  padding: 25px;
 }
